fixing distribuidores button on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -496,7 +496,7 @@ body p {
 #menu li {
 	opacity: 0.9;
 	display: inline-block;
-	margin-left: 12px;
+	margin-left: 0px;
 }
 
 #menu li a {
